# GPT

./: README.md  pyproject.toml  results.json
NERGPT/: chat.py  helpers.py  main.py
documents/: 118_1939[1].txt  121_1939[10].txt  13-x.docx  150_1939[71].txt  206_39[55].txt  208_1939[4].txt  211_1939[87].txt  212_39[75].txt  309_1939[59].txt  481-x.docx  481b.docx  test.docx  ~$481b.docx
